// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insight-engine golden master (demo dataset, UDS) > produces stable structural output for demo dataset 1`] = `
{
  "rows": [
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 3238,
      "insightTypeId": "meta_gap_temporal",
      "member": "Carlos Ramírez",
      "metricId": "cumplimiento_meta",
      "rank": 1,
      "root_problem_key": null,
      "scoreRounded": 0.6786,
      "severity": "MEDIA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 7567,
      "insightTypeId": "product_dead",
      "member": "Cacahuates 100g",
      "metricId": "venta",
      "rank": 2,
      "root_problem_key": null,
      "scoreRounded": 0.6,
      "severity": "MEDIA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 1547,
      "insightTypeId": "meta_gap_temporal",
      "member": "Miguel Ángel Díaz",
      "metricId": "cumplimiento_meta",
      "rank": 3,
      "root_problem_key": null,
      "scoreRounded": 0.2806,
      "severity": "BAJA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 12003,
      "insightTypeId": "stock_risk",
      "member": "Té Helado 500ml",
      "metricId": "inventario",
      "rank": 4,
      "root_problem_key": null,
      "scoreRounded": 0.4,
      "severity": "BAJA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "producto",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 2.98,
      "impactoValorRounded": 2,
      "insightTypeId": "migration",
      "member": "Papas Fritas 150g",
      "metricId": "frecuencia_compra",
      "rank": 5,
      "root_problem_key": null,
      "scoreRounded": 0.3197,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.54,
      "impactoValorRounded": 639,
      "insightTypeId": "migration",
      "member": "Super Económico",
      "metricId": "ventas_por_cliente",
      "rank": 6,
      "root_problem_key": null,
      "scoreRounded": 0.2796,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "categoria",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 150.98,
      "impactoValorRounded": -1780,
      "insightTypeId": "contribution",
      "member": "Snacks",
      "metricId": "venta",
      "rank": 7,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 113.66,
      "impactoValorRounded": -1340,
      "insightTypeId": "contribution",
      "member": "Carlos Ramírez",
      "metricId": "venta",
      "rank": 8,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
  ],
  "summary": {
    "datasetSize": {
      "inventory": 20,
      "metas": 900,
      "sales": 94838,
    },
    "engineStatus": {
      "candidatesSelected": 11,
      "candidatesTotal": 228,
      "detectorsEmitted": {
        "change_point": 68,
        "correlation": 0,
        "meta_gap_temporal": 3,
        "motor1": 140,
        "outlier_builder": 4,
        "steady_share": 4,
        "z9_hydration": 15,
      },
    },
    "poolAfterFilter": {
      "byDimension": {
        "categoria": 1,
        "cliente": 1,
        "producto": 3,
        "vendedor": 3,
      },
      "byInsightType": {
        "contribution": 2,
        "meta_gap_temporal": 2,
        "migration": 2,
        "product_dead": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 2,
        "BAJA": 4,
        "MEDIA": 2,
      },
      "passRate": 0.727,
      "total": 8,
    },
    "poolReturnedByEngine": {
      "byDimension": {
        "categoria": 1,
        "cliente": 4,
        "producto": 3,
        "vendedor": 3,
      },
      "byInsightType": {
        "change": 1,
        "contribution": 2,
        "meta_gap_temporal": 2,
        "migration": 2,
        "outlier": 1,
        "product_dead": 1,
        "stock_risk": 1,
        "trend": 1,
      },
      "bySeverity": {
        "ALTA": 4,
        "BAJA": 4,
        "MEDIA": 3,
      },
      "total": 11,
    },
  },
}
`;

exports[`insight-engine golden master (demo dataset, USD) > produces stable structural output for demo dataset 1`] = `
{
  "rows": [
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 5708,
      "insightTypeId": "product_dead",
      "member": "Chicharrón 120g",
      "metricId": "venta",
      "rank": 1,
      "root_problem_key": null,
      "scoreRounded": 0.6,
      "severity": "MEDIA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 2871,
      "insightTypeId": "meta_gap_temporal",
      "member": "Carlos Ramírez",
      "metricId": "cumplimiento_meta",
      "rank": 2,
      "root_problem_key": null,
      "scoreRounded": 0.7784,
      "severity": "MEDIA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 25355,
      "insightTypeId": "stock_risk",
      "member": "Queso Fresco 400g",
      "metricId": "inventario",
      "rank": 3,
      "root_problem_key": null,
      "scoreRounded": 0.4,
      "severity": "BAJA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "producto",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 2.98,
      "impactoValorRounded": 2,
      "insightTypeId": "migration",
      "member": "Papas Fritas 150g",
      "metricId": "frecuencia_compra",
      "rank": 4,
      "root_problem_key": null,
      "scoreRounded": 0.3197,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.56,
      "impactoValorRounded": 1,
      "insightTypeId": "migration",
      "member": "Supermercado Nacional",
      "metricId": "precio_unitario",
      "rank": 5,
      "root_problem_key": null,
      "scoreRounded": 0.329,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 113.66,
      "impactoValorRounded": -1340,
      "insightTypeId": "contribution",
      "member": "Carlos Ramírez",
      "metricId": "unidades",
      "rank": 6,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "up",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 303.88,
      "impactoValorRounded": 1210,
      "insightTypeId": "contribution",
      "member": "María Castillo",
      "metricId": "venta",
      "rank": 7,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
  ],
  "summary": {
    "datasetSize": {
      "inventory": 20,
      "metas": 900,
      "sales": 94838,
    },
    "engineStatus": {
      "candidatesSelected": 10,
      "candidatesTotal": 243,
      "detectorsEmitted": {
        "change_point": 68,
        "correlation": 0,
        "meta_gap_temporal": 3,
        "motor1": 155,
        "outlier_builder": 4,
        "steady_share": 4,
        "z9_hydration": 14,
      },
    },
    "poolAfterFilter": {
      "byDimension": {
        "cliente": 1,
        "producto": 3,
        "vendedor": 3,
      },
      "byInsightType": {
        "contribution": 2,
        "meta_gap_temporal": 1,
        "migration": 2,
        "product_dead": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 2,
        "BAJA": 3,
        "MEDIA": 2,
      },
      "passRate": 0.7,
      "total": 7,
    },
    "poolReturnedByEngine": {
      "byDimension": {
        "cliente": 4,
        "producto": 3,
        "vendedor": 3,
      },
      "byInsightType": {
        "change": 2,
        "contribution": 2,
        "meta_gap_temporal": 1,
        "migration": 2,
        "outlier": 1,
        "product_dead": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 3,
        "BAJA": 3,
        "MEDIA": 4,
      },
      "total": 10,
    },
  },
}
`;
